--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ jsonschema-specifications==2023.12.1
 Mako==1.3.5
 MarkupSafe==2.1.5
 PyJWT==2.9.0
+PyMySQL==1.1.1
 pytz==2024.1
 referencing==0.35.1
 rpds-py==0.18.1
