--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
-MY_SECRET_KEY=kljadskl10248120318znx
-MYSQL_PASSWORD=Grigala27
-JWT_SECRET_KEY=jwtsecretkey10248120318znx
+# Flask Secrets
+MY_SECRET_KEY=kljadskl20248120318znx
+JWT_SECRET_KEY=jwtsecretkey20248120318znx
+
+# MySQL Database Configuration
+MYSQL_HOST=db
+MYSQL_ROOT_PASSWORD=MySQL_Root88
+MYSQL_DATABASE=iesprojects
+MYSQL_USER=iesproject
+MYSQL_PASSWORD=MySQL_Iesproject88
